# agentsmith-desktop

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  release.yml
docs/: README.md  agentsmith-web-development-draft.md  desktop-development-draft.md  internal-pilot-release-evidence.md  internal-pilot-runbook.md  known-limitations.md  platform-prerequisites.md  prd.md  release-checklist.md
packaging/arch/: .SRCINFO  PKGBUILD  README.md  agentsmith-desktop.desktop
scripts/: arch-package.js  local-manual-mount-smoke.sh
scripts/__tests__/: arch-package.test.ts
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/installers/linux/: README.txt
src-tauri/resources/installers/macos/: README.txt
src-tauri/resources/installers/windows/: README.txt
src-tauri/src/: lib.rs  main.rs
src/__tests__/: App.test.tsx
src/lib/auth/: callback.ts  desktop-auth.ts  jwt.ts  pkce.ts  runtime.ts  tauri-backend.ts  token-store.ts
src/lib/auth/__tests__/: callback.test.ts  desktop-auth.test.ts  pkce.test.ts  tauri-backend.test.ts  token-store.test.ts
src/lib/deployment/: normalize.ts
src/lib/deployment/__tests__/: normalize.test.ts
src/lib/doctor/: service.ts  tauri-backend.ts
src/lib/doctor/__tests__/: service.test.ts  tauri-backend.test.ts
src/lib/libraries/: api.ts  sort.ts
src/lib/mounts/: api.ts  drive-letters.ts  paths.ts  service.ts  tauri-backend.ts
src/lib/state/: desktop-state.ts  session.ts
src/test/: setup.ts
(+9 files in other folders)
