[package]
name = "agentsmith_desktop_core"
version = "0.1.0"
edition = "2024"
default-run = "agentsmith-desktop"

[lib]
name = "agentsmith_desktop_core"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "agentsmith-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
parking_lot = "0.12"
